--- a/client/src/app/core/pages/login/login.component.html
+++ b/client/src/app/core/pages/login/login.component.html
@@ -1,1 +1,32 @@
-<p>login works!</p>
+<div class="login-page">
+    <mat-card class="login-form">
+        <div class="login-form-header">
+            <span class="mat-title">Login form</span>
+        </div>
+        <mat-card-content>
+            <form [formGroup]="loginFormGroup" class="login-form-content">
+                <mat-form-field>
+                    <mat-label>Email</mat-label>
+                    <input type="email" matInput formControlName="emailControl" placeholder="Ex. pat@example.com">
+                    <mat-error
+                        *ngIf="loginFormGroup.controls['emailControl'].hasError('email') && !loginFormGroup.controls['emailControl'].hasError('required')">
+                        Please enter a valid email address
+                    </mat-error>
+                    <mat-error *ngIf="loginFormGroup.controls['emailControl'].hasError('required')">
+                        Email is <strong>required</strong>
+                    </mat-error>
+                </mat-form-field>
+                <mat-form-field>
+                    <mat-label>Password</mat-label>
+                    <input type="password" matInput formControlName="passControl">
+                    <mat-error *ngIf="loginFormGroup.controls['emailControl'].hasError('required')">
+                        Email is <strong>required</strong>
+                    </mat-error>
+                </mat-form-field>
+            </form>
+        </mat-card-content>
+        <div class="login-form-actions">
+            <button class="login-form-button" mat-flat-button color="primary">Log in</button>
+        </div>
+    </mat-card>
+</div>
