(feature) add jwt token auth

--- a/client/src/app/core/pages/login/login.component.html
+++ b/client/src/app/core/pages/login/login.component.html
@@ -26,7 +26,8 @@
             </form>
         </mat-card-content>
         <div class="login-form-actions">
-            <button class="login-form-button" mat-flat-button color="primary">Log in</button>
+            <button class="login-form-button" mat-flat-button color="primary" (click)="loginButtonPressed()">Log
+                in</button>
         </div>
     </mat-card>
 </div>
