--- a/client/src/app/feature/reports/pages/task-page/task-page.component.html
+++ b/client/src/app/feature/reports/pages/task-page/task-page.component.html
@@ -9,8 +9,7 @@
         </div>
         <app-task-table></app-task-table>
         <div class="task-actions">
-            <button mat-flat-button color="primary" aria-label="Example icon button with a home icon"
-                class="task-add-button">
+            <button mat-flat-button color="primary" class="task-add-button" (click)="openDialog()">
                 Add
             </button>
         </div>
