--- a/client/src/app/feature/reports/pages/task-page/task-table/task-table.component.html
+++ b/client/src/app/feature/reports/pages/task-page/task-table/task-table.component.html
@@ -1,5 +1,5 @@
 <div class="task-table">
-    <table mat-table [dataSource]="dataSource" class="task-table-content">
+    <table mat-table [dataSource]="tasks" class="task-table-content">
 
         <!-- Position Column -->
         <ng-container matColumnDef="id">
@@ -8,9 +8,9 @@
         </ng-container>
 
         <!-- Name Column -->
-        <ng-container matColumnDef="taskTumber">
+        <ng-container matColumnDef="taskNumber">
             <th mat-header-cell *matHeaderCellDef> Task number </th>
-            <td mat-cell *matCellDef="let element"> {{element.taskTumber}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.taskNumber}} </td>
         </ng-container>
 
         <!-- Weight Column -->
@@ -34,8 +34,8 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
         <!-- Row shown when there is no matching data. -->
-        <tr class="mat-row" *matNoDataRow>
+        <!-- <tr class="mat-row" *matNoDataRow>
             <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-        </tr>
+        </tr> -->
     </table>
 </div>
