--- a/client/src/app/feature/reports/pages/task-page/task-table/task-table.component.html
+++ b/client/src/app/feature/reports/pages/task-page/task-table/task-table.component.html
@@ -38,4 +38,5 @@
             <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
         </tr> -->
     </table>
+    <mat-paginator [length]="allItems" [pageSize]="pageSize"></mat-paginator>
 </div>
